# p2panda-chat

./: .gitignore  CHAT.md  CLAUDE.md  README.md  TODO.md  package.json
src/: CLAUDE.md
src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/ref/: README.md
src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  session.rs  views.rs
src-tauri/src/data/: auth.rs  message.rs  mod.rs  ordering.rs  persistence.rs  todo.rs
src-tauri/src/data/chat/: channel.rs  message.rs  mod.rs  profile.rs  reaction.rs  thread.rs
