[package]
name = "p2panda-chat"
version = "0.1.0"
description = "A p2p Tauri Chat App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "p2panda_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

# p2panda
p2panda = "0.7.0"
p2panda-auth = { version = "0.7.0", features = ["serde"] }
p2panda-core = "0.7.0"

# CRDTs
loro = "1.13.6"

# Async runtime
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Private key custody: Secret Service (Linux), Keychain (macOS), Credential Manager (Windows)
keyring = "4"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
